# ant-algorithm

./: .gitignore  Cargo.toml  README.md  build.rs
src/: ant.rs  anthill.rs  args.rs  auxil.rs  consts.rs  enums.rs  error.rs  log.rs  main.rs  point.rs  simul.rs  stats.rs  tech.rs  utils.rs  world.rs
