[package]
name = "ant-algorithm"
version = "1.5.8"
edition = "2024"
description = "A Rust reimplementation of Generic Ant Algorithm"
authors = ["SQD.exe"]
repository = "https://github.com/SQDexe/ant-algorithm"
readme = "README.md"
license = "Unlicense"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", default-features = false, features = ["display"] }
fastrand = "2.4.1"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqds-tools = { git = "https://github.com/SQDexe/sqds-tools", tag = "v1.3.2" }
tinyvec = "1.11.0"

[build-dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
winresource = "0.1.31"
